--- a/src/views/Home/Highlights/index.css
+++ b/src/views/Home/Highlights/index.css
@@ -13,6 +13,7 @@
 @media (max-width: 800px) {
   .higlightCardGrid {
     grid-template-columns: repeat(2,1fr);
+    row-gap: 15px;
     padding:0 180px 0 0;
   }
 }
