--- a/src/common/Table/index.css
+++ b/src/common/Table/index.css
@@ -5,18 +5,17 @@
 
 .tableGrid {
   display: grid;
-  grid-template-columns: repeat(4, minmax(110px,1fr));
+  grid-template-columns: minmax(160px,auto) minmax(110px,1fr) minmax(110px,1fr) minmax(110px,1fr);
   grid-template-rows: auto;
   border-radius: 7px 7px 0 0;
   box-shadow: 0 1px 4px 0 var(--boxShadow);
   min-width: 500px;
+  font-size: 14px;
 }
 .row {
   display: contents;
 }
 
-.row {
-}
 
 .row .heading {
   background: var(--quaternaryBg);
@@ -25,6 +24,15 @@
   align-items: center;
   justify-items: center;
   border-bottom: 1px solid var(--border);
+}
+
+.row .cell1{
+  display: grid;
+  align-items: center;
+  padding-left:11px;
+  min-height: 55px;
+  border-bottom: 1px solid var(--border);
+
 }
 .row .cell {
   display: grid;
