--- a/src/App.css
+++ b/src/App.css
@@ -217,6 +217,11 @@ select:-webkit-autofill:focus {
   color: transparent;
 }
 
+a{
+  color: inherit;
+  text-decoration: none; 
+}
+
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
