--- a/src/App.css
+++ b/src/App.css
@@ -229,3 +229,31 @@ input[type="number"]::-webkit-outer-spin-button {
   appearance: none;
   margin: 0;
 }
+
+.homeCointainer {
+  display: grid;
+  grid-template-columns: 6fr 4fr;
+  column-gap: 50px;
+  margin: 60px 0 60px 0;
+}
+
+@media (min-width: 1366px) {
+  .homeCointainer {
+    max-width: 1109px;
+    margin: 60px auto 60px auto;
+  }
+}
+@media (max-width: 1024px) {
+  .homeCointainer {
+    grid-template-columns: 1fr;
+    grid-auto-flow: row;
+    row-gap: 50px;
+  }
+}
+
+.homeHeading {
+  font-size: 21px;
+  font-weight: 500;
+  letter-spacing: -0.23px;
+  color: var(--text);
+}
