--- a/src/common/Highlights/index.css
+++ b/src/common/Highlights/index.css
@@ -44,7 +44,8 @@
     grid-template-rows: 1fr 1fr;
     grid-auto-flow: row;
     align-items: start;
-    padding: 15px 0 15px 15px;
+    padding: 15px 15px 15px 15px;
+    overflow: hidden;
     box-sizing: border-box;
 
 }
