--- a/src/views/Home/index.css
+++ b/src/views/Home/index.css
@@ -1,33 +1,27 @@
-.homeCointainer{
-    display: grid;
-    grid-template-columns: 6fr 4fr;
-    column-gap: 50px;
-    margin-top: 60px;
-    
+.homeCointainer {
+  display: grid;
+  grid-template-columns: 6fr 4fr;
+  column-gap: 50px;
+  margin: 60px 0 60px 0;
 }
 
-@media (min-width:1366px){
-  .homeCointainer{ 
-    max-width:1109px;
-    margin: 60px auto 0 auto;
-}
+@media (min-width: 1366px) {
+  .homeCointainer {
+    max-width: 1109px;
+    margin: 60px auto 60px auto;
+  }
 }
 @media (max-width: 1024px) {
   .homeCointainer {
-
     grid-template-columns: 1fr;
     grid-auto-flow: row;
     row-gap: 50px;
   }
 }
 
-.homeHeading{
-    font-size: 21px;
-    font-weight: 500;
-    letter-spacing: -.23px;
-    color: var(--text);
+.homeHeading {
+  font-size: 21px;
+  font-weight: 500;
+  letter-spacing: -0.23px;
+  color: var(--text);
 }
-
-
-
-
