--- a/src/common/DropDown/index.css
+++ b/src/common/DropDown/index.css
@@ -54,6 +54,16 @@
   transition: 0.1s;
 }
 
+.suggestion-high{
+  font-size: 14px;
+  padding: 13px;
+  letter-spacing: 0.4px;
+  cursor: pointer;
+  transition: 0.1s;
+  background: var(--constantSecondaryClr10);
+
+}
+
 .suggestion:hover {
   background: var(--constantSecondaryClr10);
 }
