--- a/src/common/Table/table.css
+++ b/src/common/Table/table.css
@@ -56,6 +56,12 @@
   border-bottom: 1px solid var(--border);
 }
 
+.row:hover{
+
+  background: var(--primaryClr05);
+  cursor: pointer;
+}
+
 .statistic {
   font-size: 14px;
   padding: 5px 0 0 0;
