--- a/src/common/Nav/nav.css
+++ b/src/common/Nav/nav.css
@@ -2,11 +2,27 @@
   display: grid;
   padding: 0 120px 0 120px;
   grid-template-columns: auto 1fr auto;
-  border-bottom: 1px solid var(--boxShadow);
   align-items: center;
   min-height: 83px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
+@media (min-width: 1366px) {
+  .navCointainer {
+    max-width: 1109px;
+  }
+}
+.nav {
+  width: 100vw;
+  max-width: 100%;
+}
+
+.navWrapper{
+  width: 100vw;
+  max-width: 100%;
+  border-bottom: 1px solid var(--boxShadow);
+}
 
 .logoNavTitle {
   font-weight: 500;
@@ -31,10 +47,10 @@
   .navCointainer {
     padding: 0 40px 0 40px;
   }
-  .searchBar{
+  .searchBar {
     width: 250px;
   }
-  .logoNavTitle{
+  .logoNavTitle {
     font-size: 18px;
   }
 }
@@ -43,18 +59,18 @@
   .navCointainer {
     padding: 0 20px 0 20px;
   }
-  .searchBar{
+  .searchBar {
     width: 170px;
   }
-  .logoNavTitle{
+  .logoNavTitle {
     font-size: 16px;
   }
 }
 
-@media (min-width:1367px){
-  .navCointainer{ 
-    padding:0px 150px;    
-}
+@media (min-width: 1367px) {
+  .navCointainer {
+    padding: 0px 150px;
+  }
 }
 
 .searchInput {
